	(set_prefs), (pm_grid_add_threading_group),
	(open_preferences_manager): remove the threading type combo box,
	and replace it with a 'Thread messages by default' check-box.
	* ui/main-window.ui: remove the threading type radio buttons,
	and replace them with a 'Thread messages' check-box.

2018-08-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Check for valid msgno

	* libbalsa/mailbox.c (mbox_get_thread_date_traverse_func): check
	that the msgno that we get from the GNode is in the valid range
	1 <= msgno <= mindex->len.

2018-08-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Clear timeout source id in handler

	* libbalsa/mailbox_local.c (lbm_local_sync_real),
	(lbm_local_sync_idle): clear LibBalsaMailboxLocal::sync_id in
	the timeout handler, not in the thread that it creates.

2018-08-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Add UI for 'merge threads by subject'

	* libbalsa/mailbox.c (libbalsa_mailbox_set_subject_gather),
	(libbalsa_mailbox_get_subject_gather): new methods.
	* libbalsa/mailbox.h: add LibBalsaMailboxView::subject_gather
	and declare the getter/setter.
	* src/balsa-index.c (balsa_index_set_thread_messages): use
	thread-messages and subject-gather to decide whether threading
	is flat, simple, or JWZ.
	* src/mailbox-conf.c (thread_messages_toggled),
	(subject_gather_toggled), (mailbox_conf_view_new_full),
	(mailbox_conf_view_check): add the UI to the mailbox config
	dialog.
	* src/main-window.c (bw_enable_mailbox_menus),
	(balsa_window_set_thread_messages): export -set-thread-messages.
	* src/main-window.h: ditto.

2018-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Limit use of LibBalsaMailboxThreadingType in src/ to balsa-index.c

	* src/main-window.c (threading_change_state): pass
	gboolean thread_messages to balsa-index, instead of
	LibBalsaMailboxThreadingType threading_type;
	* src/balsa-index.c (balsa_index_set_thread_messages): ditto;
	* src/balsa-index.h: change API.
